# kgd

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.cross  Dockerfile.local  Justfile  LICENSE  README.md  compose.local.yml  compose.yml  config.example.toml  deny.toml  justfile  rules.md
.github/workflows/: build.yml
crates/bot/: Cargo.toml
crates/bot/src/: main.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/heic-converter/: Cargo.toml  Dockerfile
crates/heic-converter/examples/: convert_dir.rs
crates/heic-converter/src/: lib.rs
crates/heic-converter/tests/: convert_heic.rs
crates/heic-converter/tests/fixtures/: sample.heic
crates/heif/: Cargo.toml  build.rs
crates/heif-sys/: Cargo.toml  README.md  build.rs
crates/heif-sys/src/: lib.rs
crates/heif/examples/: heif_to_jpg.rs
crates/heif/src/: lib.rs
crates/heif/tests/: decode.rs  sample1.heic
crates/kgd/: Cargo.toml  build.rs
crates/kgd/migrations/: 20250124_000001_create_diary_entries.sql  20250125_000001_change_date_to_timestamptz.sql  20250126_000001_create_diary_message_blocks.sql
crates/kgd/src/: config.rs  discord.rs  main.rs  ping.rs  status.rs  version.rs  wol.rs
crates/kgd/src/diary/: mod.rs  notion.rs  ogp.rs  store.rs  sync.rs  url_parser.rs
cross/: Dockerfile.aarch64-unknown-linux-gnu
