[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
authors = ["ekuinox"]

[workspace.dependencies]
# Discord Bot
serenity = "0.12"

# Wake-on-LAN
wol = "0.4"
macaddr = "1.0"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.15"
toml = "0.9"

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Ping
surge-ping = "0.8"
