[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
authors = ["ekuinox"]

[workspace.dependencies]
# Discord Bot
serenity = "0.12"

# Wake-on-LAN
wake-on-lan = "0.2"
macaddr = "1.0"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.15"
toml = "0.9"

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# CLI
clap = { version = "4", features = ["derive"] }

# Version info
vergen-gitcl = { version = "9.1", features = ["build", "cargo"] }
const_format = "0.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Ping
surge-ping = "0.8"

# Time parsing
humantime = "2.1"
humantime-serde = "1.1"

# Date/Time
chrono = "0.4"
chrono-tz = "0.10"

# Notion API
notion-client = "1.0"

# HTTP client (for Notion file upload API)
reqwest = { version = "0.12", features = ["json", "multipart"] }

# JSON serialization
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "migrate"] }

# OpenSSL (vendored for cross-compilation)
openssl = { version = "0.10", features = ["vendored"] }

# MIME type detection
mime_guess = "2.0"

# Regular expressions
regex = "1"

# Glob matching
glob-match = "0.2"

# Testing
tempfile = "3.14"

# Workspace crates
heic-converter = { path = "crates/heic-converter" }
