[package]
name = "heif"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]

[build-dependencies]
cmake = "0.1"
bindgen = "0.71"

[dev-dependencies]
image = "0.25"

[[example]]
name = "heif_to_jpg"
path = "examples/heif_to_jpg.rs"
