[package]
name = "heif"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
heif-sys = { path = "../heif-sys" }
image.workspace = true
thiserror.workspace = true

[[example]]
name = "heif_to_jpg"
path = "examples/heif_to_jpg.rs"
