[package]
name = "heif"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
image.workspace = true
thiserror.workspace = true

[target.'cfg(unix)'.dependencies]
heif-sys.path = "../heif-sys"

[[example]]
name = "heif_to_jpg"
path = "examples/heif_to_jpg.rs"
