[package]
name = "kgd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[[bin]]
name = "kgd"
path = "src/main.rs"

[dependencies]
serenity = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
toml = { workspace = true }
wol = { workspace = true }
macaddr = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
surge-ping = { workspace = true }
humantime = { workspace = true }
humantime-serde = { workspace = true }
