[package]
name = "kgd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "kgd"
path = "src/main.rs"

[dependencies]
serenity.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_with.workspace = true
toml.workspace = true
wake-on-lan.workspace = true
macaddr.workspace = true
thiserror.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
surge-ping.workspace = true
humantime.workspace = true
humantime-serde.workspace = true
const_format.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
notion-client.workspace = true
reqwest.workspace = true
serde_json.workspace = true
handlebars.workspace = true
sqlx.workspace = true
openssl.workspace = true

# HEIC/HEIF image support (optional, requires Linux for embedded build)
libheif-rs = { version = "2.6", features = ["embedded-libheif"], optional = true }
# Image processing (for JPEG encoding, used with HEIC support)
image = { version = "0.25", default-features = false, features = ["jpeg"], optional = true }

[features]
default = ["heic-support"]
heic-support = ["dep:libheif-rs", "dep:image"]

[build-dependencies]
vergen-gitcl.workspace = true

[dev-dependencies]
tempfile.workspace = true

[package.metadata.cargo-machete]
ignored = ["humantime-serde", "openssl"]
