[package]
name = "kgd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
serenity.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_with.workspace = true
toml.workspace = true
wake-on-lan.workspace = true
macaddr.workspace = true
thiserror.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
surge-ping.workspace = true
humantime.workspace = true
humantime-serde.workspace = true
const_format.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
notion-client.workspace = true
reqwest.workspace = true
serde_json.workspace = true
sqlx.workspace = true
openssl.workspace = true
mime_guess.workspace = true
regex.workspace = true
glob-match.workspace = true

[target.'cfg(unix)'.dependencies]
heif.path = "../heif"

[build-dependencies]
vergen-gitcl.workspace = true

[package.metadata.cargo-machete]
ignored = ["humantime-serde", "openssl"]
